Added services, controllers, converters and database functinonallity
